remove useless block with path object